wordpress-module/modules/alb/security-group-alb-sg.tf
##########################
# SECURITY GROUP ALB     #
##########################
resource "aws_security_group" "alb_sg" {
  name        = "${var.cliente}-${var.environment}-alb-sg"
  description = "Security group for Application Load Balancer"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "allow HTTPS traffic"
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "allow HTTP traffic"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Owner       = "Ortiz"
    Environment = var.environment
    Terraform   = "true"
  }
}
